--- a/gameover.html
+++ b/gameover.html
@@ -3,14 +3,16 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="menu.css">
+    <link rel="stylesheet" type="text/css" href="help.css" />
     <meta charset="utf-8" />
   </head>
   <body>
     <main>
-      <h1>GRAVITY PONG</h1>
-      <button onclick="startGame()">Iniciar Juego</button>
-      <button onclick="help()">Ayuda</button>
+      <h1>Game Over</h1>
+      <h2>Inténtalo de nuevo</h2>
+      <section></section>
+
+      <button onclick="back()">Volver al menú</button>
     </main>
     <script src="menu.js"></script>
   </body>
