Added more music elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta charset="utf-8" />
   </head>
   <body>
+    <header>
+      <audio id="backgroundMusic" loop autoplay>
+        <source src="./musicaMenu.wav" type="audio/wav">
+      </audio>
+    </header>
     <main>
       <h1>GRAVITY PONG</h1>
       <button onclick="startGame()">Iniciar Juego</button>
