fix some bugs with menu music

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <h1>GRAVITY PONG</h1>
       <button onclick="startGame()">Iniciar Juego</button>
       <button onclick="help()">Ayuda</button>
+      <button id="mute" onclick=music()></button>
     </main>
     <script src="menu.js"></script>
   </body>
