--- a/help.html
+++ b/help.html
@@ -10,6 +10,13 @@
 <body>
     <main>
         <h1>Ayuda</h1>
+        <audio id="backgroundMusic" loop autoplay>
+            <source src="./helpmusic.wav" type="audio/wav">
+        </audio>
+        <button id="mute" onclick=music()>
+            <img src="./mute.jpg" alt="Mute/Unmute">
+        </button>
+        <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="1">
         <h2>Controles básicos</h2>
         <section>
             <p>Para poder jugar al juego tendrás que usar las flechas del teclado. Si pulsas la flecha izquierda la pala
