--- a/help.html
+++ b/help.html
@@ -17,6 +17,7 @@
             <img src="./mute.jpg" alt="Mute/Unmute">
         </button>
         <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="1">
+        <script src="menu.js"></script>
         <h2>Controles básicos</h2>
         <section>
             <p>Para poder jugar al juego tendrás que usar las flechas del teclado. Si pulsas la flecha izquierda la pala
@@ -82,10 +83,19 @@
                                 Sonido de rebote en la pala
                             </li>
                             <li>
+                                Sonido de rebote en pared
+                            </li>
+                            <li>
                                 Sonido de aumento de dificultad
                             </li>
                             <li>
                                 Sonido de perdida de vida
+                            </li>
+                            <li>
+                                Música dentro de la partida
+                            </li>
+                            <li>
+                                Música de menu principal y menu de ayuda
                             </li>
                         </ul>
                     </article>
@@ -105,7 +115,6 @@
                 </section>
                 <button onclick="back()">Volver al menú</button>
     </main>
-    <script src="menu.js"></script>
 </body>
 
 </html>
