--- a/gameover.html
+++ b/gameover.html
@@ -3,7 +3,7 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="help.css" />
+    <link rel="stylesheet" type="text/css" href="gameover.css" />
     <meta charset="utf-8" />
   </head>
   <body>
