reduced sound quality for size purposes

--- a/help.html
+++ b/help.html
@@ -11,7 +11,7 @@
     <main>
         <h1>Ayuda</h1>
         <audio id="backgroundMusic" loop autoplay>
-            <source src="./helpmusic.wav" type="audio/wav">
+            <source src="./helpmusic.mp3" type="audio/mp3">
         </audio>
         <button id="mute" onclick=music()>
             <img src="./mute.jpg" alt="Mute/Unmute">
