--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <audio id="backgroundMusic" loop autoplay>
-        <source src="./musicaMenu.wav" type="audio/wav">
+        <source src="./musicaMenu.mp3" type="audio/mp3">
       </audio>
     </header>
     <main>
